; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/tests/combotst/extr_combotst.c_HandlePrintReturnStr.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/tests/combotst/extr_combotst.c_HandlePrintReturnStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFFERLEN = common dso_local global i32 0, align 4
@TextBuffer = common dso_local global i8* null, align 8
@g_hwnd = common dso_local global i32 0, align 4
@ResultX = common dso_local global i32 0, align 4
@ResultY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32)* @HandlePrintReturnStr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @HandlePrintReturnStr(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* @BUFFERLEN, align 4
  %13 = sub nsw i32 %12, 8
  %14 = trunc i32 %13 to i8
  %15 = load i8*, i8** @TextBuffer, align 8
  %16 = getelementptr inbounds i8, i8* %15, i64 8
  store i8 %14, i8* %16, align 1
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %9, align 4
  %21 = call i64 @SendMessage(i32 %17, i32 %18, i32 %19, i32 %20)
  store i64 %21, i64* %10, align 8
  %22 = load i32, i32* @g_hwnd, align 4
  %23 = call i32 @GetWindowRect(i32 %22, i32* %11)
  %24 = load i8*, i8** @TextBuffer, align 8
  %25 = load i32, i32* @ResultX, align 4
  %26 = load i32, i32* @ResultY, align 4
  %27 = load i64, i64* %10, align 8
  %28 = trunc i64 %27 to i32
  %29 = add nsw i32 8, %28
  %30 = load i32, i32* %11, align 4
  %31 = call i32 @PrintTextXY(i8* %24, i32 %25, i32 %26, i32 %29, i32 %30)
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local i64 @SendMessage(i32, i32, i32, i32) #1

declare dso_local i32 @GetWindowRect(i32, i32*) #1

declare dso_local i32 @PrintTextXY(i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
